# digicamwm

./: .gitignore  Cargo.toml  LICENSE  README.ID.md  README.md  designs.js  electron.vite.config.js  index.html  index.js  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  tauri.conf.json  vite.config.js
.github/workflows/: build.yml
capabilities/: default.json
scripts/: sync-version.js
src/: commands.rs  designs.rs  lib.rs  watermark.rs
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/assets/designs/[filename]/: route.ts
web/app/api/designs/: route.ts
web/app/api/process/: route.ts
web/components/: WatermarkApp.tsx
web/lib/: watermark.ts
web/types/: design.ts  exif-parser.d.ts
