[package]
name = "digicamwm"
version = "1.0.7"
description = "Digital Camera Watermarking Tool"
authors = ["gvoze32"]
license = "ISC"
repository = "https://github.com/gvoze32/digicamwm"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-log = "2.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
image = "0.25"
kamadak-exif = "0.6"
resvg = "0.45"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
